fixin collapsing menu on narrower screen, overlap with buttons

--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -38,7 +38,7 @@
     }
     &--middle {
       display: inline-block;
-      width: calc(100% - 410px);
+      width: calc(100% - 420px);
       overflow-x: hidden;
 
       @mixin atMedium {
