--- a/app/assets/styles/modules/_menu.css
+++ b/app/assets/styles/modules/_menu.css
@@ -5,7 +5,7 @@
   @mixin atSmall {
     display: flex;
     float: left;
-    margin: 0 0 0 26px;
+    padding: 0 0 0 26px;
     padding: 0;
   }
   @mixin atMedium {
